<resources>
    <string name="app_name">AnimationsWithOpenGL</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_open_gl">OpenGL</string>
    <string name="title_activity_cross_fade">CrossFade</string>
    <string name="para">In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.
        Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content.
        It also reduces the need for the designer to come up with meaningful text, as they can instead use quickly-generated lorem ipsum.</string>
    <string name="title_activity_view_animations">ViewAnimations</string>
    <string name="view_animations">View Animations</string>
    <string name="property_animations">Property Animations</string>
    <string name="drawable_animations">Drawable Animations</string>
    <string name="custom_animations">Custom Animations</string>
    <string name="notice_animation">Notice the animation on click</string>

    <string-array name="list_elements">
        <item>View Animations</item>
        <item>Property Animations</item>
        <item>Drawable Animations</item>
        <item>Custom Animations</item>
    </string-array>

    <string-array name="view_animation_elements">
        <item>Alpha</item>
        <item>Scaling</item>
        <item>Rotation</item>
        <item>Transformation</item>
        <item>Custom Set</item>
    </string-array>

    <string-array name="property_animation_elements">
        <item>Value Animator</item>
        <item>Object Animator</item>
        <item>Animator Set</item>
    </string-array>

    <string-array name="custom_animation_elements">
        <item>Scene end Transitions</item>
        <item>Extending Animation Class</item>
        <item>Circular Reveal Animations</item>
        <item>Transitions across activity</item>
    </string-array>

    <string-array name="transitions_fragment_elements">
        <item>CrossFade</item>
        <item>Card Flip Animation</item>
        <item>Zooming a View</item>
    </string-array>

    <string-array name="custom_animations_fragment_elements">
        <item>Blink Animation</item>
        <item>Highlight Animation</item>
        <item>Explode Animation</item>
        <item>Slide In</item>
        <item>My Animation</item>
    </string-array>

    <string name="title_activity_property_animations">PropertyAnimations</string>
    <string name="title_activity_drawable_animations">DrawableAnimations</string>
    <string name="title_activity_custom_animations">CustomAnimations</string>
    <string name="alpha">Alpha</string>
    <string name="scale">Scale</string>
    <string name="linear_interpolator">Linear Interpolator</string>
    <string name="accelerate_decelerate">Accelerate/Decelerate</string>
    <string name="set_interpolator">Select Interpolator</string>
    <string name="value_animator">Value Animator</string>
    <string name="object_animator">Object Animator</string>
    <string name="transform">Transform</string>
    <string name="custom_interpolator">Custom Interpolator</string>
    <string name="animator_set">Animator Set</string>
    <string name="ball">Ball</string>
    <string name="frame">Frame</string>
    <string name="checkbox">CheckBox</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click">Click the button to go to next scene.</string>
    <string name="reveal_text">This is circular reveal.</string>
    <string name="click_button"><![CDATA[Click the button to continue ->]]></string>
    <string name="click_to_go_back"><![CDATA[Click the button to go back ->]]></string>
    <string name="normal_text">This is normal view.</string>
    <string name="start_transition">Start Transition</string>
</resources>
