<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/header"
        android:textSize="@dimen/sp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/object_animator"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ball_layout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70">

        <ImageView
            android:id="@+id/ball"
            android:background="@drawable/ball"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100">

            <Button
                android:id="@+id/alpha"
                android:text="@string/alpha"
                android:background="@drawable/button_click"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/scale"
                android:text="@string/scale"
                android:background="@drawable/button_click"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/transform"
                android:text="@string/transform"
                android:background="@drawable/button_click"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150">

            <TextView
                android:id="@+id/set_interpolator"
                android:text="@string/set_interpolator"
                android:textSize="@dimen/sp_20"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/linear_interpolator"
                android:text="@string/linear_interpolator"
                android:background="@drawable/button_click"
                android:textSize="@dimen/sp_11"
                android:paddingRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/accelerate_decelerate_interpolator"
                android:text="@string/accelerate_decelerate"
                android:background="@drawable/button_click"
                android:textSize="@dimen/sp_11"
                android:paddingRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/custom_interpolator"
                android:text="@string/custom_interpolator"
                android:textSize="@dimen/sp_11"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@drawable/button_click"
                android:paddingRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>