<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/header"
        android:textSize="@dimen/sp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/value_animator"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/switch_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/ball_layout_text"
            android:text="@string/ball"
            android:textSize="@dimen/sp_20"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/dp_1"
            android:paddingTop="@dimen/dp_1"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_1"
            android:layout_marginRight="@dimen/dp__3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/frame_layout_text"
            android:text="@string/frame"
            android:textSize="@dimen/sp_20"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="@dimen/dp_1"
            android:paddingRight="@dimen/dp_1"
            android:paddingBottom="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp__3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ball_layout"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70">

        <ImageView
            android:id="@+id/ball"
            android:background="@drawable/ball"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:visibility="gone"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_100"
        android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/initial_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:text="@string/checkbox"
                        android:textSize="@dimen/sp_20"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/bottom_border"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_below="@id/initial_layout"
                    android:background="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"/>

                <TextView
                    android:id="@+id/hidden_text"
                    android:text="Not Checked"
                    android:textSize="@dimen/sp_20"
                    android:alpha="0"
                    android:gravity="center"
                    android:layout_below="@id/initial_layout"
                    android:layout_marginTop="@dimen/dp_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
    </FrameLayout>

    <Button
        android:id="@+id/reset"
        android:visibility="gone"
        android:text="@string/reset"
        android:background="@drawable/button_click"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100">

            <Button
                android:id="@+id/alpha"
                android:text="@string/alpha"
                android:background="@drawable/button_click"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/scale"
                android:text="@string/scale"
                android:background="@drawable/button_click"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/transform"
                android:text="@string/transform"
                android:background="@drawable/button_click"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150">

            <TextView
                android:id="@+id/set_interpolator"
                android:text="@string/set_interpolator"
                android:textSize="@dimen/sp_20"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/linear_interpolator"
                android:text="@string/linear_interpolator"
                android:textSize="@dimen/sp_11"
                android:background="@drawable/button_click"
                android:paddingRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/accelerate_decelerate_interpolator"
                android:text="@string/accelerate_decelerate"
                android:textSize="@dimen/sp_11"
                android:background="@drawable/button_click"
                android:paddingRight="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/custom_interpolator"
                android:text="@string/custom_interpolator"
                android:background="@drawable/button_click"
                android:textSize="@dimen/sp_11"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>