<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/main_frame">

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/reveal_layout"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reveal_text"
            android:textColor="@android:color/white"
            android:text="@string/reveal_text"
            android:textSize="@dimen/sp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/normal_text"
        android:textSize="@dimen/sp_30"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="@dimen/sp_20"
        android:id="@+id/click_button_text"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_50"
        android:text="@string/click_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_button"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_gravity="bottom|right"/>
</FrameLayout>